hphp/test/vm/dv_as.php.exp
HipHop Fatal error: Default value for parameter a1 with type String needs to have the same type as the type hint array in hphp/test/vm/dv_as.php on line 3
