hphp/test/vm/dv_as.php
<?php
class A {
  public function a(array $a1 = "abc") {}
}
